--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -10,7 +10,7 @@
         },
         "Docker": {
             "Entrypoint": ["python3", "main.py"],
-            "Image": "xqua/carpai-demo-repo:v0.6",
+            "Image": "xqua/carpai-demo-repo:v0.6"
         },
         "Engine": "Docker",
         "Language": {
@@ -35,8 +35,7 @@
                 "CID": {{.PromptCID}},
                 "Name": "prompt_template_input",
                 "StorageSource": "IPFS",
-                "path": "/prompt_template.json",
-
+                "path": "/prompt_template.json"
             },
         ],
         "outputs": [
